--- a/package.json
+++ b/package.json
@@ -5,53 +5,77 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --build-optimizer --app 0",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "format": "prettier --single-quote --print-width 120 --write \"{apps,libs}/**/*.ts\""
+    "format": "prettier --single-quote --print-width 120 --write \"{apps,libs}/**/*.ts\"",
+    "build:ssr": "yarn build:client-and-server-bundles && yarn webpack:server",
+    "serve:ssr": "node dist/apps/admin-mobile/server.js",
+    "build:client-and-server-bundles":
+      "ng build --prod --build-optimizer && ng build --prod --build-optimizer --app 1 --output-hashing=false",
+    "webpack:server": "webpack --config webpack.config.js --progress --colors",
+    "ssr": "yarn build:ssr && yarn serve:ssr",
+    "pwa": "sw-precache --root=dist/apps/admin-mobile/browser --config=precache-config.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.4",
-    "@angular/common": "^4.4.4",
-    "@angular/compiler": "^4.4.4",
-    "@angular/core": "^4.4.4",
-    "@angular/forms": "^4.4.4",
-    "@angular/http": "^4.4.4",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
-    "@angular/router": "^4.4.4",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
-    "@nrwl/nx": "^0.0.6",
-    "@ngrx/effects": "^4.0.0",
-    "@ngrx/router-store": "^4.0.0",
-    "@ngrx/store": "^4.0.0",
-    "@ngrx/store-devtools": "^4.0.0"
+    "@angular/animations": "^5.0.0-rc.3",
+    "@angular/common": "^5.0.0-rc.3",
+    "@angular/compiler": "^5.0.0-rc.3",
+    "@angular/core": "^5.0.0-rc.3",
+    "@angular/forms": "^5.0.0-rc.3",
+    "@angular/http": "^5.0.0-rc.3",
+    "@angular/platform-browser": "^5.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^5.0.0-rc.3",
+    "@angular/platform-server": "^5.0.0-rc.9",
+    "@angular/router": "^5.0.0-rc.3",
+    "@angular/service-worker": "^5.0.0-rc.3",
+    "@ngrx/effects": "^4.1.0",
+    "@ngrx/router-store": "^4.1.0",
+    "@ngrx/store": "^4.1.0",
+    "@ngrx/store-devtools": "^4.0.0",
+    "@nguniversal/express-engine": "^5.0.0-beta.4",
+    "@nrwl/nx": "^0.1.0-beta.0",
+    "@swimlane/ngx-charts": "^6.1.0",
+    "angular-bootstrap-md": "^4.3.7",
+    "chart.js": "^2.7.1",
+    "core-js": "^2.5.1",
+    "d3": "^4.11.0",
+    "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
+    "mz": "^2.7.0",
+    "puppeteer": "^0.12.0",
+    "rxjs": "^5.5.0",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "nrwl/fix-cli-build",
-    "@angular/compiler-cli": "^4.4.4",
-    "@nrwl/schematics": "^0.0.6",
-    "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
+    "@angular/cli": "^1.5.0-rc.3",
+    "@angular/compiler-cli": "^5.0.0-rc.3",
+    "@angular/language-service": "^5.0.0-rc.3",
+    "@nguniversal/module-map-ngfactory-loader": "^1.0.0-beta.3",
+    "@nrwl/schematics": "^0.1.0-beta.0",
+    "@types/express": "^4.0.39",
+    "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "@types/node": "~8.0.46",
+    "codelyzer": "~3.2.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "prettier": "1.7.4"
+    "prettier": "1.7.4",
+    "protractor": "~5.2.0",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "ts-loader": "^3.1.1",
+    "ts-node": "~3.3.0",
+    "tslint": "~5.8.0",
+    "typescript": "~2.5.3"
   }
 }
